2012-03-20 Emilie Sagniez <emilie@in-cite.net>
	* Version changed to 1.0.0

2011-12-02 GOYER Frederic  <fgoyer@in-cite.net>
	* initial code generated with kickstarter